<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JNL工作计时软件</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_input_user_name">请输入用户名！</string>
    <string name="please_input_user_passwd">请输入密码！</string>
    <string name="user_auther_error">用户名或密码不正确！</string>
    <string name="user_auther_not_exist">当前用户不存在！</string>
    <string name="change_user_passwd_successed">密码修改成功！</string>
    <string name="add_new_user_successed">新用户添加成功！</string>
    <string name="user_has_exist">该用户已存在！</string>
    <string name="steel_info">钢板信息</string>
    <string name="cut_bank_code">切割板图号</string>
    <string name="nc_file_name">对应NC文件</string>
    <string name="scanner">扫描</string>
    <string name="search_text">查询</string>
    <string name="qualified_code">合格号:</string>
    <string name="version_number">规格:</string>
    <string name="stove_code">炉批号:</string>
    <string name="material_quality">材质:</string>
    <string name="start">开工</string>
    <string name="pause">暂停</string>
    <string name="pause_next">继续</string>
    <string name="end">结束</string>
    <string name="start_time">开工时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="counting_time">计      时:</string>
    <string name="current_month_time">本月累计:</string>
    <string name="no_file_exist">文件夹下没有该切割板的PDF文件！</string>
    <string name="please_choose_cut_plate">请选择切割版号！</string>
    <string name="please_choose_real_cut_plate">请输入正确的切割板号！</string>
    <string name="please_close_and_open">当前工作已开始，请结束后重新点击.</string>
    <string name="please_frist_work">请先开始工作。</string>
    <string name="please_input_file">请在文件夹下放入相应的文件。</string>
    <string name="exit">再按一次退出程序</string>
    <!-- 扫描二维码 -->
    <string name="qr_codes_scan_text">将二维码/条码放入框内，即可自动扫描</string>
    <string name="qr_codes_scan_nothing">未识别到二维码</string>
    <string name="qr_codes_actionbar_titile">二维码扫描</string>
    <!-- 工业扫描头扫描二维码 -->
    <string name="txt_readme">EMserialportV2.0.0 Readme:\n
        					  1:选择要打开的串口结点，波特率，显示方式后，点击“打开”按钮；\n
        					  2:显示方式ASCII(fast)及HEX(fast)会自动清空读到的数据（避免数据量大时程序卡死无响应）;\n
        					  3:“保存窗口”按钮可以保存窗口数据到TF卡，当提示保存成功才算成功(/mnt/sdcard/external_sdcard/)；\n
        					  4:在发送文本框里，当为16进制发送模式时，可以输入16进制数据及空格；\n
        					  5:状态中TX:表示发送的数据字节数；RX:表示接收到的数据字节数；\n
        					  6:在成功打开串口前，“发送”及“关闭”按钮不可用；\n
        					  7:本软件不支持中文接收及发送；\n
        					  8:本软件只支持2014年01月01日以后发布的系统；\n
        					  9:点击扩展功能，可以对一些外围模块进行操作；</string>
    <string name="txt_readme_nothing" />
    <string name="txt_auto_sendtime">200</string>
    <string name="txt_d_baud">波特率</string>
    <string name="txt_d_index">串口结点</string>
    <string name="txt_d_hex">显示</string>
    <string name="txt_d_st">状态</string>
    <string name="txt_d_st_tx">TX:0</string>
    <string name="txt_d_st_rx">RX:0</string>
    <string name="txt_d_set_ascii">ASCII</string>
    <string name="txt_d_set_hex">HEX</string>
    <string name="txt_d_set_auto">AUTO</string>
    <string name="txt_d_windows">窗口操作</string>
    <string name="db_button_open">上电</string>
    <string name="db_button_close">下电</string>
    <string name="txt_dg_group">GPIO组号:</string>
    <string name="txt_dg_num">GPIO脚号:</string>
    <string name="txt_dg_state">GPIO状态:</string>
    <string name="txt_dg_bd_cont">GPS/BD Power:</string>
    <string name="button_open">打开</string>
    <string name="button_close">已关闭</string>
    <string name="button_clean">清除</string>
    <string name="button_send">发送</string>
    <string name="button_save">保存窗口</string>
    <string name="txt_d_open">串口操作</string>
    <string name="button_ext">扩展</string>
    <string name="txt_send_auto">定时</string>
    <string name="txt_send_cmd">内容</string>
    <string name="txt_ex_system">芯片平台</string>
    <string name="txt_ex_db">北斗操作</string>
    <string name="txt_ext_ir">条码操作</string>
    <string name="txt_ex_915m">RFID操作</string>
    <string name="txt_bd_on">已打开</string>
    <string name="txt_bd_off">已关闭</string>
    <string name="txt_ir_on">已打开</string>
    <string name="txt_ir_off">已关闭</string>
    <!-- pdf文件 -->
    <string name="version">1.3 (git build)</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching…</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="toggle_reflow_mode">Toggle reflow mode</string>
    <string name="Scan">Scan</string>
    <string name="Stop">Stop</string>
    <string name="AutoFocus">Auto-Focus</string>
    <string name="Revoke">Revoke license</string>
    <string name="Acquire">Acquire License</string>
    <!-- pdf文件 -->
</resources>

