<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.camelbell.singlemipca.AppView
        android:id="@+id/AppView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:visibility="gone">

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Scan" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/Stop" />

        <Button
            android:id="@+id/acquire_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/Acquire" />

        <Button
            android:id="@+id/revoke_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/Revoke" />
    </LinearLayout>
</LinearLayout>