<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:orientation="horizontal" >
        
    <LinearLayout 
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:focusable="true" 
		android:focusableInTouchMode="true" 
        android:orientation="horizontal">
        
        <LinearLayout 
        	android:layout_width="fill_parent"  
        	android:layout_height="fill_parent"
        	android:layout_weight="2.4"
        	android:focusable="true" 
			android:focusableInTouchMode="true" 
        	android:orientation="horizontal">
        	
        <TextView
       				android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginLeft="5dp"
        			android:layout_marginTop="10dp"
        			android:textSize="25sp"
        			android:textColor="#ff0000"
        			android:textStyle="bold"
        			android:layout_weight="1.6"
        			android:text="@string/txt_send_auto"/>
        
        <EditText
       			android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:id="@+id/text_auto_time"
        		android:layout_marginTop="5dp"
        		android:layout_marginBottom="5dp"
        		android:text="@string/txt_auto_sendtime"
        		android:maxLines="1"
        		android:layout_weight="1.6"
        		android:background="@drawable/frame_bg" />
        
        <CheckBox 
    				android:id="@+id/cb_send_auto"
     				android:layout_width="fill_parent" 
      				android:layout_height="wrap_content"
     				android:checked="false" 
     				android:textColor="#000000"
     				android:layout_marginTop="10dp"
     				android:layout_marginBottom="10dp"
     				android:layout_weight="0.9"
     				android:textStyle="bold"
	    			android:text="@string/txt_d_set_auto"/>
        </LinearLayout>
        
        <LinearLayout 
        	android:layout_width="fill_parent"  
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:focusable="true" 
			android:focusableInTouchMode="true" 
        	android:orientation="horizontal">
        
            <TextView
       				android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginLeft="10dp"
        			android:layout_marginTop="10dp"
        			android:textSize="25sp"
        			android:textColor="#ff0000"
        			android:textStyle="bold"
        			android:layout_weight="3.4"
        			android:text="@string/txt_send_cmd"/>
            
          <EditText
       			android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:id="@+id/text_send"
        		android:layout_marginTop="5dp"
        		android:layout_marginBottom="5dp"
        		android:text="@string/txt_readme_nothing"
        		android:maxLines="2"
        		android:layout_weight="1"
        		android:background="@drawable/frame_bg" />
          
          <CheckBox 
    				android:id="@+id/cb_send_hex"
     				android:layout_width="fill_parent" 
      				android:layout_height="wrap_content"
     				android:checked="false" 
     				android:textColor="#000000"
     				android:layout_marginTop="10dp"
     				android:layout_marginBottom="10dp"
     				android:layout_weight="3.2"
     				android:textStyle="bold"
	    			android:text="@string/txt_d_set_hex"/>
	</LinearLayout>
       </LinearLayout>
       		<Button   
            		android:id="@+id/button_send"  
            		android:layout_width="fill_parent"  
            		android:layout_height="wrap_content" 
            		android:textColor="#ff0000" 
            		android:textStyle="bold"
            		android:layout_marginTop="5dp"
            		android:layout_marginLeft="5dp"
            		android:layout_marginRight="5dp"
            		android:textSize="20sp"
            		android:layout_weight="6"
            		android:text="@string/button_send"/> 
            		
       		<Button   
            		android:id="@+id/button_ext"  
            		android:layout_width="fill_parent"  
            		android:layout_height="wrap_content" 
            		android:textColor="#ff0000" 
            		android:textStyle="bold"
            		android:layout_marginTop="5dp"
            		android:layout_marginLeft="5dp"
            		android:layout_marginRight="5dp"
            		android:textSize="20sp"
            		android:layout_weight="6"
            		android:text="@string/button_ext"/>
       </LinearLayout>